kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: book-review
spec:
  type: LoadBalancer

  selector:
    app: frontend

  ports:
    - name: http
      port: 80
      targetPort: 3000
